- ADD: Added support for export of multicat traits to Germinate format. - ADD: Added support for locked trials and cells. - ADD: Added support for storing the media file format in the trial. -